--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     "pages/duihua/duihua",
     "pages/add/add",
     "pages/collect_0/collect_0",
-    "pages/search/search"
+    "pages/search/search",
+    "pages/picedit/picedit"
   ],
   "window": {
     "backgroundTextStyle": "dark",
